# handler/deleteOpening.go
@@ -8,6 +8,19 @@ import (
 	"github.com/nathanfabio/goOpportunities/schemas"
 )
 
+
+// @BasePath /api/v1
+
+// @Summary Delete Opening
+// @Description Delete Opening
+// @Tags openings
+// @Accept json
+// @Produce json
+// @Param id query string  true "Opening identification"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
